Updating from ktown slack

--- a/emojipack.yaml
+++ b/emojipack.yaml
@@ -156,6 +156,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/beautifly/849cc6aece876516.png"
   - name: "beedrill"
     src: "https://emoji.slack-edge.com/T6RF3FX40/beedrill/5cc45b961f4397a2.png"
+  - name: "beerbelly"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/beerbelly/f0aa97a225d6057d.png"
   - name: "beers_gif"
     src: "https://emoji.slack-edge.com/T6RF3FX40/beers_gif/b47648a7f3111e33.gif"
   - name: "beldum"
@@ -252,6 +254,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/cacnea/6fed5909a36b966a.png"
   - name: "cacturne"
     src: "https://emoji.slack-edge.com/T6RF3FX40/cacturne/7c6fa214eddcb3bc.png"
+  - name: "cafe_brass_monkey"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/cafe_brass_monkey/ce9b0fd04b59ea6f.png"
   - name: "camera_flash"
     src: "https://emoji.slack-edge.com/T6RF3FX40/camera_flash/e398ee64557d4c69.gif"
   - name: "camerupt"
@@ -454,6 +458,14 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/detective-pikachu/8f8216e4ced35e5a.png"
   - name: "dewgong"
     src: "https://emoji.slack-edge.com/T6RF3FX40/dewgong/72b9b446647e78d9.png"
+  - name: "dialga"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/dialga/a27f00056bafe706.png"
+  - name: "dialga_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/dialga_gif/3380c9e1a74c61de.gif"
+  - name: "dialga_retro_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/dialga_retro_gif/2caf01986f7252a5.gif"
+  - name: "dialga_smash_trophy"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/dialga_smash_trophy/781384d20d79de71.png"
   - name: "diglett"
     src: "https://emoji.slack-edge.com/T6RF3FX40/diglett/becd9b29a85c5516.png"
   - name: "diglett_alolan"
@@ -832,6 +844,10 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/golden_razz_berry/e23764e51f73b2ba.png"
   - name: "golduck"
     src: "https://emoji.slack-edge.com/T6RF3FX40/golduck/7dc83c29882356a2.png"
+  - name: "golduck_shiny"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/golduck_shiny/ce2dd55f0c6d34c1.png"
+  - name: "golduck_shiny_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/golduck_shiny_gif/ce2dd55f0c6d34c1.gif"
   - name: "golem"
     src: "https://emoji.slack-edge.com/T6RF3FX40/golem/979089ee1c18b149.png"
   - name: "golem_alolan"
@@ -926,6 +942,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/hammer_time/3f5fd1d1e3becec2.gif"
   - name: "handshake_emoji"
     src: "https://emoji.slack-edge.com/T6RF3FX40/handshake_emoji/e4ddc6bd371dc531.gif"
+  - name: "handsome_psyduck"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/handsome_psyduck/8cd7c082f7db84d4.png"
   - name: "happy_emoji"
     src: "https://emoji.slack-edge.com/T6RF3FX40/happy_emoji/d2168ae778b6b2e9.gif"
   - name: "hariyama"
@@ -1004,6 +1022,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/hypno_shiny/b218ff66d7a0c60a.png"
   - name: "hypno_shiny_gif"
     src: "https://emoji.slack-edge.com/T6RF3FX40/hypno_shiny_gif/3435e6dd857a70dd.gif"
+  - name: "i_see_you_mural"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/i_see_you_mural/ac752fa7aedbdd00.png"
   - name: "ice_type"
     src: "https://emoji.slack-edge.com/T6RF3FX40/ice_type/24f7495388b8ec06.png"
   - name: "idea"
@@ -1078,6 +1098,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/kadabra/262a224920f05313.png"
   - name: "kangaskhan"
     src: "https://emoji.slack-edge.com/T6RF3FX40/kangaskhan/0338fc6348df8775.png"
+  - name: "kingdom_hearts"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/kingdom_hearts/623db4a81e40a7d6.png"
   - name: "kingdra"
     src: "https://emoji.slack-edge.com/T6RF3FX40/kingdra/0a8f121d6febc323.png"
   - name: "kingler"
@@ -1508,6 +1530,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/nerd_cat_face/f35d7d052e2cb87d.png"
   - name: "nerd_emoji"
     src: "https://emoji.slack-edge.com/T6RF3FX40/nerd_emoji/19324a1b6ef655d5.gif"
+  - name: "netflix"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/netflix/8450625deb157317.png"
   - name: "netscape"
     src: "https://emoji.slack-edge.com/T6RF3FX40/netscape/bffb3097e01ddeb8.gif"
   - name: "niantic_logo"
@@ -1574,6 +1598,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/numel/48129ca6df601f16.png"
   - name: "nuzleaf"
     src: "https://emoji.slack-edge.com/T6RF3FX40/nuzleaf/4a90597107010b67.png"
+  - name: "obey_peace_mural"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/obey_peace_mural/d5ed7a6b21389026.png"
   - name: "octillery"
     src: "https://emoji.slack-edge.com/T6RF3FX40/octillery/f42f46a702cea5ef.png"
   - name: "oddish"
@@ -1598,6 +1624,20 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/overwatch/a3ecce9d21774264.png"
   - name: "pachirisu"
     src: "https://emoji.slack-edge.com/T6RF3FX40/pachirisu/9d65cf7bb522a494.png"
+  - name: "palkia"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia/690fe7c469e765b3.png"
+  - name: "palkia_attacks"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_attacks/7671380519a97237.png"
+  - name: "palkia_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_gif/f0a6fcd2268a431c.gif"
+  - name: "palkia_just_laughs"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_just_laughs/5df9bdfaeab55b66.gif"
+  - name: "palkia_retro_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_retro_gif/2ce118f48428d426.gif"
+  - name: "palkia_smash_trophy"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_smash_trophy/621b83a23113f5fd.png"
+  - name: "palkia_strikes_again"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/palkia_strikes_again/6c78e6ef8893df66.png"
   - name: "panic_button"
     src: "https://emoji.slack-edge.com/T6RF3FX40/panic_button/4bc6b918bc71bca9.png"
   - name: "paras"
@@ -1832,6 +1872,10 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/psychic_type/1ba567adb6c71873.png"
   - name: "psyduck"
     src: "https://emoji.slack-edge.com/T6RF3FX40/psyduck/1c04b8edb77ab894.png"
+  - name: "psyduck_shiny"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/psyduck_shiny/ce2dd55f0c6d34c1.png"
+  - name: "psyduck_shiny_gif"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/psyduck_shiny_gif/60ba39fa17643032.gif"
   - name: "pupitar"
     src: "https://emoji.slack-edge.com/T6RF3FX40/pupitar/c4d72c9cb190e913.png"
   - name: "pupitar_shiny"
@@ -1908,6 +1952,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/raiders_logo/a3d986cdb0e43b94.png"
   - name: "raikou"
     src: "https://emoji.slack-edge.com/T6RF3FX40/raikou/6975b99c43a7e6ed.png"
+  - name: "ralph_wiggum_psyduck"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/ralph_wiggum_psyduck/acfa45552df95d3c.jpg"
   - name: "ralts"
     src: "https://emoji.slack-edge.com/T6RF3FX40/ralts/2ef889ae69d99c10.png"
   - name: "rams_logo"
@@ -2220,6 +2266,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/spoink/58086c0eb9c377ae.png"
   - name: "spongebob"
     src: "https://emoji.slack-edge.com/T6RF3FX40/spongebob/88dec467f7c4ee68.gif"
+  - name: "sprint"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/sprint/a881539da09ac8da.png"
   - name: "squirtle"
     src: "https://emoji.slack-edge.com/T6RF3FX40/squirtle/4a9a8fa87a75b1e2.png"
   - name: "squirtle_shiny"
@@ -2246,6 +2294,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/staraptor/38e7cdf52cece72e.png"
   - name: "staravia"
     src: "https://emoji.slack-edge.com/T6RF3FX40/staravia/f082a00c9be193c6.png"
+  - name: "starbucks"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/starbucks/7fc81be564a07e3b.png"
   - name: "stardust"
     src: "https://emoji.slack-edge.com/T6RF3FX40/stardust/6b4a3c2ecd71789d.png"
   - name: "starly"
@@ -2632,6 +2682,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/wigglytuff/2c8644fdb87f70f2.png"
   - name: "wikipedia"
     src: "https://emoji.slack-edge.com/T6RF3FX40/wikipedia/01f9daf82129da61.png"
+  - name: "wiltern"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/wiltern/034309483b3c1aec.png"
   - name: "windows"
     src: "https://emoji.slack-edge.com/T6RF3FX40/windows/3e684173c0230c39.png"
   - name: "windy_weather"
@@ -2682,6 +2734,8 @@ emojis:
     src: "https://emoji.slack-edge.com/T6RF3FX40/xatu/737efa99fdbf8052.png"
   - name: "xatu_shiny"
     src: "https://emoji.slack-edge.com/T6RF3FX40/xatu_shiny/af9cc855bb2a8999.png"
+  - name: "xbox"
+    src: "https://emoji.slack-edge.com/T6RF3FX40/xbox/76983087784f1e2f.png"
   - name: "xzibit"
     src: "https://emoji.slack-edge.com/T6RF3FX40/xzibit/d7f376d3b95bf30a.png"
   - name: "yanma"
